--- a/trunk/Projeto/WebContent/templates/main.xhtml
+++ b/trunk/Projeto/WebContent/templates/main.xhtml
@@ -21,6 +21,7 @@
 					<td>
 						<ui:include src="/templates/include/header.xhtml" />
 						<rich:panel style="height:600px;">
+							<h:messages id="mssages"/>
 							<ui:insert name="body"/>
 						</rich:panel>
 						<ui:include src="/templates/include/footer.xhtml" />
