--- a/Projeto/WebContent/templates/include/header.xhtml
+++ b/Projeto/WebContent/templates/include/header.xhtml
@@ -29,7 +29,7 @@
 		             	<h:inputText styleClass="barsearch" size="20" rendered="#{not empty userBean.firstName}" />
                 		<h:commandButton styleClass="barsearchbutton" onclick="return false;"  value="#{labels.search}" rendered="#{not empty userBean.firstName}"/>
 						<a4j:commandLink value="#{userBean.completeName}" style="text-decoration: none; color: black;" rendered="#{not empty userBean.firstName}"/>
-						<a4j:commandLink action="#{userBean.logout}" value="#{labels.exit}" style="text-decoration: none" rendered="#{not empty userBean.firstName}"/>
+						<a4j:commandLink action="logout" value="#{labels.exit}" style="text-decoration: none" rendered="#{not empty userBean.firstName}"/>
 					</rich:toolBarGroup>
 		    	</rich:toolBar>
 			</a4j:form>
