--- a/trunk/Projeto/WebContent/templates/include/header.xhtml
+++ b/trunk/Projeto/WebContent/templates/include/header.xhtml
@@ -14,7 +14,7 @@
 
 		<ui:composition>
 			<a4j:form>
-				<rich:toolBar>
+				<rich:toolBar id="toolBar">
 					<rich:toolBarGroup location="left">
 						<rich:dropDownMenu rendered="#{userBean.role == 'user' || userBean.role == 'admin'}">
 			                <f:facet name="label"> 
@@ -27,23 +27,25 @@
 						<rich:dropDownMenu rendered="#{userBean.role == 'admin'}">
 			                <f:facet name="label"> 
 			                    <h:panelGroup>
-			                        <h:outputText value="Manutenção"/>
+			                        <h:outputText value="#{labels['menu.maintenance']}"/>
 			                    </h:panelGroup>
 			                </f:facet>
 			                <rich:menuGroup value="Cadastros">
-			                	<rich:menuItem submitMode="server" value="Usuários" 
+			                	<rich:menuItem submitMode="server" value="#{labels['menu.roles']}" 
+			                        action="#{roleBean.findAll}" />
+			                	<rich:menuItem submitMode="server" value="#{labels['menu.users']}" 
 			                        action="#{usersBean.findAll}" />
 		                	</rich:menuGroup>
 			           	</rich:dropDownMenu>
 						
-						<h:outputText value="Logue-se" rendered="#{empty userBean.role}"/>			            	
+						<h:outputText value="#{labels['menu.login']}" rendered="#{empty userBean.role}"/>			            	
 		            </rich:toolBarGroup>
 							            
 		            <rich:toolBarGroup location="right">
 		             	<h:inputText styleClass="barsearch" size="20" rendered="#{not empty userBean.role}" />
-                		<h:commandButton styleClass="barsearchbutton" onclick="return false;"  value="#{labels.search}" rendered="#{not empty userBean.role}"/>
+                		<h:commandButton styleClass="barsearchbutton" onclick="return false;"  value="#{labels['menu.search']}" rendered="#{not empty userBean.role}"/>
 						<a4j:commandLink value="#{userBean.firstName} #{userBean.lastName}" style="text-decoration: none; color: black;" rendered="#{not empty userBean.role}"/>
-						<a4j:commandLink action="logout" value="#{labels.exit}" style="text-decoration: none" rendered="#{not empty userBean.role}"/>
+						<a4j:commandLink action="logout" value="#{labels['menu.exit']}" style="text-decoration: none" rendered="#{not empty userBean.role}"/>
 					</rich:toolBarGroup>
 		    	</rich:toolBar>
 			</a4j:form>
