--- a/Projeto/WebContent/templates/main.xhtml
+++ b/Projeto/WebContent/templates/main.xhtml
@@ -34,6 +34,14 @@
 					}
 				}
 			</script>
+			
+			<style>
+				.rich-inplace-select-font{ 
+					font-size : 10px/*generalSizeFont*/; 
+					font-family : arial/*generalFamilyFont*/; 
+					color : #000000/*generalTextColor*/
+				} 
+			</style>
 		</head>
 		<body>
 			<a4j:status onstart="showModalInfoWindow();" onstop="hideModalInfoWindow()"/>
