--- a/Projeto/WebContent/templates/main.xhtml
+++ b/Projeto/WebContent/templates/main.xhtml
@@ -59,7 +59,7 @@
 						<td style="width:200px;">&nbsp;</td>
 						<td>
 							<ui:include src="/templates/include/header.xhtml" />
-							<rich:panel style="height:600px;">
+							<rich:panel style="height:100%;">
 								<a4j:outputPanel ajaxRendered="true">
 									<a4j:form>
 										<h:panelGroup layout="block" rendered="#{not empty userBean.autoridade and not empty bean.breadCrumb}">
