--- a/Projeto/WebContent/templates/main.xhtml
+++ b/Projeto/WebContent/templates/main.xhtml
@@ -60,8 +60,8 @@
 						<td>
 							<ui:include src="/templates/include/header.xhtml" />
 							<rich:panel style="height:100%;">
-								<a4j:outputPanel ajaxRendered="true">
-									<a4j:form>
+								<a4j:outputPanel ajaxRendered="true">								
+									<a4j:form ajaxSubmit="true">
 										<h:panelGroup layout="block" rendered="#{not empty userBean.autoridade and not empty bean.breadCrumb}">
 											<a4j:repeat value="#{bean.breadCrumb}" var="item" rowKeyVar="index">
 												<h:panelGroup layout="block" rendered="#{index == (fn:length(bean.breadCrumb) - 1)}">
@@ -84,7 +84,7 @@
 										<br />
 									</h:panelGroup>
 									<ui:insert name="body"/>
-								</a4j:outputPanel>
+								</a4j:outputPanel>					
 							</rich:panel>
 							<ui:include src="/templates/include/footer.xhtml" />
 						</td>
