--- a/Projeto/WebContent/templates/include/footer.xhtml
+++ b/Projeto/WebContent/templates/include/footer.xhtml
@@ -10,7 +10,7 @@
 		<ui:composition>
 			<body>
 				<rich:panel>
-					Rodape
+					SAP - Sistema de Acompanhamento de Projetos
 				</rich:panel>
 			</body>
 		</ui:composition>
