--- a/Projeto/WebContent/templates/main.xhtml
+++ b/Projeto/WebContent/templates/main.xhtml
@@ -45,11 +45,6 @@
 		</head>
 		<body>
 			<f:view>
-				<rich:messages binding="#{bean.errorMessage}" id="errorMessage" 
-				              showDetail="true" showSummary="true" ajaxRendered="true" rendered="false"/>
-				<rich:messages binding="#{bean.infoMessage}" id="infoMessage" 
-				              showDetail="true" showSummary="true" ajaxRendered="true" rendered="false"/>
-				              
 				<a4j:status onstart="showModalInfoWindow();" onstop="hideModalInfoWindow()"/>
 		   		<rich:modalPanel id="ajaxLoadingModalBox" height="50" width="200" style="text-align:center;">
 					<h:outputText value="#{labels['info.aguardeSuaRequisicao']}"/>
@@ -83,6 +78,13 @@
 										<br />
 										<br />
 									</h:panelGroup>
+									
+									<rich:messages id="errorMessage" showDetail="true" 
+										showSummary="false" ajaxRendered="true" 
+										errorClass="error" infoClass="info" warnClass="success" fatalClass="warning"/>
+										
+							        <br />
+							        
 									<ui:insert name="body"/>
 								</a4j:outputPanel>					
 							</rich:panel>
