--- a/Projeto/WebContent/templates/main.xhtml
+++ b/Projeto/WebContent/templates/main.xhtml
@@ -80,7 +80,8 @@
 										<br />
 									</h:panelGroup>
 									
-									<p:messages showDetail="true" id="msg" />
+									<p:messages id="mensagens" showDetail="true" 
+										showSummary="false" globalOnly="true"/>
 										
 							        <br />
 							        
